configuracion general de spring